# rocket-server

./: Cargo.toml  README.MD  database.sqlite
src/: basic_auth.rs  main.rs  models.rs  repositoires.rs
