[package]
name = "rocket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
diesel = { version = "2.0.3", features = ["sqlite", "r2d2"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.3"
features = ["diesel_sqlite_pool", "sqlite_pool"] 